# sltasks

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  mkdocs.yml  pyproject.toml  sltasks.yml  sltasks.yml.file  sltasks.yml.git
.github/workflows/: ci.yml
.tasks/: add-dark-mode.md  another-new-bug.md  fix-login-bug.md  refactor-api.md  setup-ci.md  tasks.yaml  test-bug.md  write-docs.md
.tasks/templates/: bug.md  feature.md  task.md
.zed/: settings.json
docs/: github-projects.md  index.md  kosmos_prd.md  sltasks_prd.md
docs/design/: github-phase1-updates.md  github-phase2-filesystem-sync.md  github-pr-provider.md  github-projects-integration-requirements.md  jira-integration-requirements.md  repository-protocol.md  state_mutation_prompt.md
docs/getting-started/: installation.md  quick-start.md
docs/providers/: file-provider.md  github-provider.md  index.md
docs/user-guide/: cli.md  configuration.md  navigation.md
plans/: README.md  github-integration-phase-1.md  github-phase2-epic.md  github-phase2-phase-a.md  github-phase2-phase-b.md  github-phase2-phase-c.md  github-prep2.md  github-projects-phase1-implementation.md  github-projects-phase1a-autoupdates.md  phase-10-help-screen.md  phase-2-models.md  phase-3-repository.md  phase-4-services.md  phase-5-basic-tui.md  phase-7-navigation.md  phase-8-actions.md  phase-9-filter-command.md  status-alias.md
plans/custom-columns/: master.md  phase-1-config-model.md  phase-2-task-state-migration.md  phase-3-board-model.md  phase-4-service-layer.md  phase-5-dynamic-ui.md  phase-6-polish.md  phase-7-generate-command.md  sltasks.yml  tasks.yaml
plans/project-init/: phase-1-setup.md  phase-11-task-preview.md  phase-12-tests.md  phase-3-repository.md  phase-6-task-cards.md  phase-8-actions.md  phase-9-filter-command.md
scripts/: lint.sh
src/kosmos/: __init__.py  __main__.py  (+1 more)
tests/: __init__.py  test_app_github_actions.py  test_board_service.py  test_config_service.py  test_edge_cases.py  test_filter.py  test_generate.py  test_github_client.py  test_github_repository.py  test_github_setup.py  test_models.py  test_repository.py  test_sltasks_config.py  test_slug.py  test_sync_file_mapper.py  test_sync_filter_parser.py  test_sync_models.py  test_task_service.py  test_template_service.py  test_type_config.py
(+73 files in other folders)
