[project]
name = "kosmos"
version = "0.1.0"
description = "Terminal-based Kanban TUI for markdown task management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.89.0",
    "pydantic-settings>=2.6.0",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
kosmos = "kosmos.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kosmos"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "textual-dev>=1.8.0",
]
