[project]
name = "sltasks"
version = "0.1.0"
description = "Terminal-based Kanban TUI for markdown task management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.89.0",
    "pydantic-settings>=2.6.0",
    "python-frontmatter>=1.1.0",
    "httpx>=0.28.1",
]

[project.scripts]
sltasks = "sltasks.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sltasks"]

[tool.hatch.build.targets.wheel.force-include]
"src/sltasks/data/templates" = "sltasks/data/templates"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "textual-dev>=1.8.0",
    "ruff>=0.8.0",
    "pyrefly",
    "pre-commit",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pymdown-extensions>=10.15",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "RUF012", # mutable class attributes - Textual framework uses this pattern
]

[tool.ruff.lint.isort]
known-first-party = ["sltasks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
python-version = "3.13"
project-includes = ["src"]
